Set Java release version to 21, except in lib and tests