@@ -7,6 +7,7 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -84,7 +85,7 @@ public class RosettaTestModelService {
 		URL resourceURL = getClass().getResource(resourceFolderOrFile);
 	    Path resourcePath;
 		try {
-			resourcePath = Path.of(resourceURL.toURI());
+			resourcePath = Paths.get(resourceURL.toURI());
 		} catch (URISyntaxException e) {
 			throw new RuntimeException(e);
 		}
